--- a/_data/comments/1584662400/entry1585052587334.yml
+++ b/_data/comments/1584662400/entry1585052587334.yml
@@ -5,5 +5,5 @@ agent: >-
   Gecko) Chrome/80.0.3987.99 Mobile Safari/537.36
 name: علی
 email: fdc84b62d0329c0efb4377a4d26fbdac
-msg: "برای دومین سال،باز هم عالی\r\nتشکر فراوان\r\nدوستانی که فرمودند تقویم براشون نمایش داده نشده،لطفا تماس بگیرن راهنمایی کنم،البته با کسب اجازه از جناب اسدی مهربان"
+msg: "برای دومین سال،باز هم عالی\r\nتشکر فراوان\r\nدوستانی که فرمودند تقویم براشون نمایش داده نشده،لطفا تماس بگیرن راهنمایی کنم،البته با کسب اجازه از جناب اسدی مهربان 09905717730"
 date: 1585052587
