--- a/_data/comments/1616284800/entry1616660070974.yml
+++ b/_data/comments/1616284800/entry1616660070974.yml
@@ -7,6 +7,6 @@ msg: >-
   @شاهین، متاسفانه من گوشی آیفون ندارم که تست کنم، اما اگر تقویم آیفون قابلیت
   اضافه کردن اکانت گوگل داشته باشد، با اضافه کردن اکانت گوگل بایستی تقویم‌های
   حسابتان در آن همگام‌سازی شود. اگر هم تقویم آیفون قابلیت اضافه کردن حساب ندارد،
-  می‌توانید از گزینه گرفتن خروجی (export) استفاده کنید و فایل iCal خروجی را در
-  برنامه تقویم import کنید.
+  می‌توانید از روش «گرفتن فایل خروجی (Export)» که در همین نوشته توضیح دادم استفاده
+  کنید و فایل iCal خروجی را در برنامه تقویم گوشی import کنید.
 date: 1616660070
