--- a/_data/comments/1452470400/entry1530676760202.yml
+++ b/_data/comments/1452470400/entry1530676760202.yml
@@ -1,6 +1,6 @@
 _id: a0e37040-7f3e-11e8-8d70-d1fe8093ccf8
-url: asadicseyahoo.com
+url: infoasadiweb.ir
 name: مرتضی اسدی
-email: cb00fdea2f1306996f699afdd9c367d2
+email: 2be12c20ad02236a95d4d44366de84e0
 msg: "با سلام خدمت شما دوست عزیز\r\nمعلوم است که شما این رمان را با دقت و تیزبینی خاصی مطالعه کرده‌اید؛ با توجه به وقایع انتهایی داستان، برداشت شما نیز می‌تواند جزء پایان‌های متصور برای «جای خالی سلوچ» باشد. \r\nتا اینجا ۳ پایان مختلف برای جای خالی سلوچ مطرح کردیم، نخست برداشت من بود که می‌گفت در انتهای داستان سلوچ زنده است  و به زمیج برمی‌گردد (امیدبخش‌ترین پایان)؛ دوم برداشت خانم سمانه خانی بود که در نظرات گفتند سلوچ مرده است و داستان پایانی وهم‌آلود دارد؛ سومین پایان نیز نظر آقای حمید است که می‌گوید سلوچ در چاه مرده بود و به این دلیل گم شده بود."
 date: 1530676760
