--- a/_data/comments/1521590400/entry1528743041850.yml
+++ b/_data/comments/1521590400/entry1528743041850.yml
@@ -1,7 +1,7 @@
 _id: 56bb5110-6da8-11e8-ba6b-61e5423f919c
-url: asadicseyahoo.com
+url: infoasadiweb.ir
 name: مرتضی اسدی
-email: cb00fdea2f1306996f699afdd9c367d2
+email: 2be12c20ad02236a95d4d44366de84e0
 msg: >-
   با سلام و احترام؛ اگر منظورتان از صفحه نمایش، صفحه home (خانه) گوشی است،
   می‌توانید از ویجت‌های تقویم استفاده کنید؛ معمولاً اکثر گوشی‌های اندرویدی چندین
