--- a/_data/comments/1521590400/entry1543503951971.yml
+++ b/_data/comments/1521590400/entry1543503951971.yml
@@ -1,8 +1,8 @@
 _id: 42e29d30-f3e8-11e8-9eb5-2f766060d2d6
-url: asadicseyahoo.com
+url: infoasadiweb.ir
 agent: 'Mozilla/5.0 (X11; Linux x86_64; rv:63.0) Gecko/20100101 Firefox/63.0'
 name: مرتضی اسدی
-email: cb00fdea2f1306996f699afdd9c367d2
+email: 2be12c20ad02236a95d4d44366de84e0
 msg: >-
   سلام دوست عزیز؛ چون این موضوع به برنامه شماره‌گیر و مخاطبین تلفن همراه شما
   بستگی دارد،‌ فکر نمی‌کنم با این روش نتیجه‌ای بگیرید. شاید با جستجو در
