--- a/_data/comments/1521590400/entry1546263234478.yml
+++ b/_data/comments/1521590400/entry1546263234478.yml
@@ -1,7 +1,7 @@
 _id: b7593a30-0d00-11e9-816c-0596addec340
-url: asadicseyahoo.com
+url: infoasadiweb.ir
 agent: 'Mozilla/5.0 (Android 8.1.0; Mobile; rv:64.0) Gecko/64.0 Firefox/64.0'
 name: مرتضی اسدی
-email: cb00fdea2f1306996f699afdd9c367d2
+email: 2be12c20ad02236a95d4d44366de84e0
 msg: سلام دوست عزیز؛ امیدوارم همواره موفق باشید.
 date: 1546263234
