--- a/_data/comments/1521590400/entry1550516609423.yml
+++ b/_data/comments/1521590400/entry1550516609423.yml
@@ -1,7 +1,7 @@
 _id: e07491a0-33af-11e9-95fb-6f3031f62c77
-url: asadicseyahoo.com
+url: infoasadiweb.ir
 agent: 'Mozilla/5.0 (X11; Linux x86_64; rv:65.0) Gecko/20100101 Firefox/65.0'
 name: مرتضی اسدی
-email: cb00fdea2f1306996f699afdd9c367d2
+email: 2be12c20ad02236a95d4d44366de84e0
 msg: "باید تقویم را extract کنید و از فایل خروجی آن موارد را پاک کنید. نگاهی به این تقویم هم بیندازید، فکر کنم مطابق خواسته شماست، چون فقط تاریخ شمسی را دارد، بدون هیچ مناسبتی.\r\n\r\nhttps://calendar.google.com/calendar/embed?src=fm79ocs70hfo6b8q1qsp3mj6b4@group.calendar.google.com&ctz=Asia/Tehran"
 date: 1550516609
