--- a/_data/comments/1585612800/entry1585662998233.yml
+++ b/_data/comments/1585612800/entry1585662998233.yml
@@ -1,8 +1,8 @@
 _id: 70b069a0-7357-11ea-b6f8-a99475bd3249
-url: asadicseyahoo.com
+url: infoasadiweb.ir
 agent: 'Mozilla/5.0 (X11; Linux x86_64; rv:74.0) Gecko/20100101 Firefox/74.0'
 name: مرتضی اسدی
-email: cb00fdea2f1306996f699afdd9c367d2
+email: 2be12c20ad02236a95d4d44366de84e0
 msg: >-
   @Shayan Mirzaee آن فرد می‌تواند نماد انسانهایی باشد که از طبقه اجتماعی یا وضع
   موجود راضی نیستند و تلاش به پیشرفت فردی و تغییر طبقه‌ی اجتماعی خود دارند که
