--- a/_data/comments/1616284800/entry1618041342800.yml
+++ b/_data/comments/1616284800/entry1618041342800.yml
@@ -1,10 +1,10 @@
 _id: 2608b9a0-99d2-11eb-8e44-41f773df998f
-url: asadicseyahoo.com
+url: infoasadiweb.ir
 agent: >-
   Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like
   Gecko) Chrome/89.0.4389.114 Safari/537.36
 name: مرتضی اسدی
-email: cb00fdea2f1306996f699afdd9c367d2
+email: 2be12c20ad02236a95d4d44366de84e0
 msg: >-
   @عباس، این نوشته درباره‌ی افزودن تقویم شمسی به صورت رویداد (event) به برنامه
   کلندر گوشی است، اینکه بشود کنار تاریخ میلادی، تاریخ شمسی نشان داد، کاملا به
