--- a/_data/comments/1484611200/entry1614880181350.yml
+++ b/_data/comments/1484611200/entry1614880181350.yml
@@ -1,7 +1,7 @@
 _id: fefb4c10-7d11-11eb-81de-9901edb625c6
-url: asadicseyahoo.com
+url: infoasadiweb.ir
 agent: 'Mozilla/5.0 (X11; Linux x86_64; rv:86.0) Gecko/20100101 Firefox/86.0'
 name: مرتضی اسدی
-email: cb00fdea2f1306996f699afdd9c367d2
+email: 2be12c20ad02236a95d4d44366de84e0
 msg: "برای اجرای بازی‌های آتاری ۲۶۰۰ روی اندروید باید یک شبیه‌ساز آتاری روی گوشی خود نصب کنید. در google play می‌توان این شبیه‌سازها را پیدا کرد.\r\nhttps://play.google.com/store/search?q=atari%202600%20emulators&c=apps&hl=en_US&gl=US"
 date: 1614880181
