--- a/_data/comments/1521590400/entry1529416564808.yml
+++ b/_data/comments/1521590400/entry1529416564808.yml
@@ -1,7 +1,7 @@
 _id: 81e74170-73c8-11e8-b970-9b3e102e0cbc
-url: asadicseyahoo.com
+url: infoasadiweb.ir
 name: مرتضی اسدی
-email: cb00fdea2f1306996f699afdd9c367d2
+email: 2be12c20ad02236a95d4d44366de84e0
 msg: >-
   سلام دوست عزیز، آیا در تنظیمات تقویم گوشی خود گزینه‌ای به نام calendars to
   display یا «تقویم‌هایی برای نمایش» پیدا کردید؟
