--- a/_data/comments/1521590400/entry1541104532198.yml
+++ b/_data/comments/1521590400/entry1541104532198.yml
@@ -1,7 +1,7 @@
 _id: ad41f2e0-de15-11e8-a7ba-5f132f22f084
-url: asadicseyahoo.com
+url: infoasadiweb.ir
 name: مرتضی اسدی
-email: cb00fdea2f1306996f699afdd9c367d2
+email: 2be12c20ad02236a95d4d44366de84e0
 msg: >-
   دوستان لطفا توجه کنند که با طی مراحل این نوشته تقویم شمسی به حساب گوگل آنها
   اضافه می‌شود، لذا تنها کاری که لازم است انجام بدهند این است که حساب گوگل خود
