--- a/_data/comments/1521590400/entry1542846994809.yml
+++ b/_data/comments/1521590400/entry1542846994809.yml
@@ -1,7 +1,7 @@
 _id: 46a44b00-f3e6-11e8-9eb5-2f766060d2d6
-url: asadicseyahoo.com
+url: infoasadiweb.ir
 agent: 'Mozilla/5.0 (X11; Linux x86_64; rv:63.0) Gecko/20100101 Firefox/63.0'
 name: مرتضی اسدی
-email: cb00fdea2f1306996f699afdd9c367d2
+email: 2be12c20ad02236a95d4d44366de84e0
 msg: سلام دوست عزیز؛ متاسفانه مشکل شما را متوجه نشدم.
 date: 1543503099
