--- a/_data/comments/1521590400/entry1544352168926.yml
+++ b/_data/comments/1521590400/entry1544352168926.yml
@@ -1,8 +1,8 @@
 _id: 2b892460-fb9f-11e8-bd0c-897ccc9ef26b
-url: asadicseyahoo.com
+url: infoasadiweb.ir
 agent: 'Mozilla/5.0 (Android 8.1.0; Mobile; rv:63.0) Gecko/63.0 Firefox/63.0'
 name: مرتضی اسدی
-email: cb00fdea2f1306996f699afdd9c367d2
+email: 2be12c20ad02236a95d4d44366de84e0
 msg: >-
   سلام دوست عزیز، تقویم پیش‌فرض سیستم‌عامل اندروید میلادی است، همانطور که در
   نظرات بالاتر گرفته‌ام شاید بتوان با جستجو در گوگل پلی/بازار، برنامه شماره‌گیر،
