--- a/_data/comments/1521590400/entry1550290545667.yml
+++ b/_data/comments/1521590400/entry1550290545667.yml
@@ -1,8 +1,8 @@
 _id: 87e2bc70-31a1-11e9-ac92-4388953693f3
-url: asadicseyahoo.com
+url: infoasadiweb.ir
 agent: 'Mozilla/5.0 (Android 9; Mobile; rv:65.0) Gecko/65.0 Firefox/65.0'
 name: مرتضی اسدی
-email: cb00fdea2f1306996f699afdd9c367d2
+email: 2be12c20ad02236a95d4d44366de84e0
 msg: >-
   با سلام و سپاس از دوستان عزیز، احتمالا در ماه آینده تقویم شمسی سال ۱۳۹۸ را
   آماده می‌کنم.
