--- a/_data/comments/1521590400/entry1550994524349.yml
+++ b/_data/comments/1521590400/entry1550994524349.yml
@@ -1,8 +1,8 @@
 _id: 9beac920-3808-11e9-ae56-1792b3b62f94
-url: asadicseyahoo.com
+url: infoasadiweb.ir
 agent: 'Mozilla/5.0 (Android 9; Mobile; rv:65.0) Gecko/65.0 Firefox/65.0'
 name: مرتضی اسدی
-email: cb00fdea2f1306996f699afdd9c367d2
+email: 2be12c20ad02236a95d4d44366de84e0
 msg: >-
   سلام دوست عزیز، ایجاد این تقویم‌ها زیاد سخت نیست، ففط کافی است فایل ICS آن را
   ایجاد کنید و در اکانت گوگل‌تان در calendar.google.com آپلود کنید. اینکه
