--- a/_data/comments/1521590400/entry1553027313924.yml
+++ b/_data/comments/1521590400/entry1553027313924.yml
@@ -1,8 +1,8 @@
 _id: 90f6a5e0-4a85-11e9-853a-831a5e1526e5
-url: asadicseyahoo.com
+url: infoasadiweb.ir
 agent: 'Mozilla/5.0 (X11; Linux x86_64; rv:65.0) Gecko/20100101 Firefox/65.0'
 name: مرتضی اسدی
-email: cb00fdea2f1306996f699afdd9c367d2
+email: 2be12c20ad02236a95d4d44366de84e0
 msg:
   >-
   با سپاس از دوستان عزیز،‌
