--- a/_data/comments/1546819200/entry1546970962512.yml
+++ b/_data/comments/1546819200/entry1546970962512.yml
@@ -1,7 +1,7 @@
 _id: 86269090-1370-11e9-9524-9320704afe97
-url: asadicseyahoo.com
+url: infoasadiweb.ir
 agent: 'Mozilla/5.0 (X11; Linux x86_64; rv:64.0) Gecko/20100101 Firefox/64.0'
 name: مرتضی اسدی
-email: cb00fdea2f1306996f699afdd9c367d2
+email: 2be12c20ad02236a95d4d44366de84e0
 msg: سلام؛ خیلی ممنونم از شما دوست عزیز. متن را اصلاح کردم.
 date: 1546970962
