--- a/_data/comments/1553126400/entry1581629520208.yml
+++ b/_data/comments/1553126400/entry1581629520208.yml
@@ -1,7 +1,7 @@
 _id: 4481a200-4ea8-11ea-a8df-ade5fc9831f4
-url: asadicseyahoo.com
+url: infoasadiweb.ir
 agent: 'Mozilla/5.0 (X11; Linux x86_64; rv:73.0) Gecko/20100101 Firefox/73.0'
 name: مرتضی اسدی
-email: cb00fdea2f1306996f699afdd9c367d2
+email: 2be12c20ad02236a95d4d44366de84e0
 msg: "با سلام خدمت دوستان عزیز\r\nمن امروز تقویم شمسی سال ۱۳۹۹ را در سه نسخه تهیه کرده‌ام و از آنجایی که نوشته مربوط به تقویم سال ۱۳۹۹ را در ابتدای همان سال می‌نویسم، لذا برای دوستانی که نمی‌خواهند منتظر بمانند و می‌خواهند زودتر تقویم سال جدید را به تقویم گوگل خود اضافه کنند، لینک تقویم سال ۱۳۹۹ را در ادامه می‌گذارم:\r\n<a href=https://calendar.google.com/calendar/embed?src=2fbipn4ked5p9h7jrjpjjj8qn4%40group.calendar.google.com&amp;ctz=Asia%2FTehran target=_blank>تقویم سال ١٣٩٩</a>\r\n<a href=https://calendar.google.com/calendar/embed?src=aetlrnvpf6tk2dhc7ijk50p8r8%40group.calendar.google.com&amp;ctz=Asia%2FTehran target=_blank>تقویم کوتاه سال ١٣٩٩ (روز و ماه)</a>\r\n<a href=https://calendar.google.com/calendar/embed?src=rp8lfm47korun21j0stor4ckfk%40group.calendar.google.com&amp;ctz=Asia%2FTehran target=_blank>تقویم کوتاه سال ١٣٩٩ (روز)</a>"
 date: 1581629520
