--- a/_data/comments/1584662400/entry1585077471200.yml
+++ b/_data/comments/1584662400/entry1585077471200.yml
@@ -1,8 +1,8 @@
 _id: 2775af50-6e04-11ea-8600-d7d1eedbb469
-url: asadicseyahoo.com
+url: infoasadiweb.ir
 agent: 'Mozilla/5.0 (X11; Linux x86_64; rv:74.0) Gecko/20100101 Firefox/74.0'
 name: مرتضی اسدی
-email: cb00fdea2f1306996f699afdd9c367d2
+email: 2be12c20ad02236a95d4d44366de84e0
 msg: >-
   سلام؛ از اظهار لطف دوستان عزیز بسیار سپاس‌گزارم؛ دوست داشتم به تک‌تک سوالات،
   مشکلات و همچنین اظهار لطف دوستان پاسخ دهم، ولی متاسفانه با توجه به اینکه وقت
