--- a/_data/comments/1616284800/entry1616740875848.yml
+++ b/_data/comments/1616284800/entry1616740875848.yml
@@ -1,10 +1,10 @@
 _id: 5e170100-8edb-11eb-8a82-a3557b3acf3f
-url: asadicseyahoo.com
+url: infoasadiweb.ir
 agent: >-
   Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like
   Gecko) Chrome/89.0.4389.90 Safari/537.36
 name: مرتضی اسدی
-email: cb00fdea2f1306996f699afdd9c367d2
+email: 2be12c20ad02236a95d4d44366de84e0
 msg: >-
   @محمد، نسخه ۱ و ۲ تقویم ۱۴۰۰ شامل مناسبت‌های سال جدید بوده و این مناسبت‌ها
   منطبق بر مناسبت‌های سایت time.ir هستند. سایر نسخه‌های تقویم به دلیل اینکه
